syntax = "proto3";

package procession;

import "common.proto";
import "user.proto";

// The IAM gRPC service handles storage and operations for users,
// organizations, authorization, etc.
service IAM {
    // Returns information about a specific user
    rpc get_user(GetUserRequest) returns (User) {}

    // Set information about a specific user
    rpc set_user(SetUserRequest) returns (ActionReply) {}

    // Returns information about multiple users
    rpc list_users(ListUsersRequest) returns (stream User) {}
}
